[gd_scene load_steps=3 format=3 uid="uid://ts6ikpfygdba"]

[ext_resource type="Script" uid="uid://dkcuv226tku8u" path="res://Scripts/game_over.gd" id="1_m5628"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qg30o"]
bg_color = Color(1, 0, 0, 1)
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[node name="GameOver" type="Control" node_paths=PackedStringArray("statistics_label")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m5628")
statistics_label = NodePath("ColorRect/CenterContainer/VBoxContainer/Statistics")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.701856, 0.654242, 1)

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ColorRect/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 116
text = "Bankruptcy"

[node name="Statistics" type="Label" parent="ColorRect/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 18
text = "Statistics:
Generated cash: 500$
Customer count: 50
Products bought: 561"
horizontal_alignment = 1

[node name="MainMenu" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_qg30o")
text = "Main menu"

[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
